--- a/ckanext/s3multipart/templates/package/snippets/resource_form.html
+++ b/ckanext/s3multipart/templates/package/snippets/resource_form.html
@@ -1,127 +1,145 @@
 {% ckan_extends %}
 {% block basic_fields_url %}
-{% set is_upload = (data.url_type == 'upload') %}
-{% set placeholder = placeholder if placeholder else _('http://example.com/my-image.jpg') %}
 
-<div class="image-upload" data-module="image-upload"
-     data-module-is_url="{{ 'true' if data.url and not is_upload else 'false' }}"
-     data-module-is_upload="{{ 'true' if is_upload else 'false' }}"
-     data-module-field_url="url" data-module-field_upload="upload"
-     data-module-field_clear="clear_upload" data-module-upload_label="{{ _('File') }}">
+    {% set is_upload = (data.url_type == 'upload') %}
+    {% set placeholder = placeholder if placeholder else _('http://example.com/my-image.jpg') %}
 
-    {% call form.input('url', label=_('URL'), id='field-image-url', placeholder=placeholder, value=data.get('url'), error=errors.get('url'), classes=['control-full']) %}
-    <div class="meter animate" style="display:none">
-        <span style="width: 0%"><span></span></span>
-    </div>
+    <div class="image-upload" data-module="image-upload"
+         data-module-is_url="{{ 'true' if data.url and not is_upload else 'false' }}"
+         data-module-is_upload="{{ 'true' if is_upload else 'false' }}"
+         data-module-field_url="url" data-module-field_upload="upload"
+         data-module-field_clear="clear_upload" data-module-upload_label="{{ _('File') }}">
 
-    <span id="upload-progress">
+        {% call form.input('url', label=_('URL'), id='field-image-url', placeholder=placeholder, value=data.get('url'),
+    error=errors.get('url'), classes=['control-full']) %}
+            <div class="meter animate" style="display:none">
+                <span style="width: 0%"><span></span></span>
+            </div>
+
+            <span id="upload-progress">
         </span>
-    {% endcall %}
+        {% endcall %}
 
 
-    {% call form.input('upload', label=_('File'), id='field-image-upload', type='file', placeholder='', value='', error='', classes=['control-full']) %}
-    <a id="advanced-upload" class="btn btn-default" style="display: none;"><i class="fa fa-cloud-upload"></i>Advanced Upload</a>
-    {% endcall %}
-    {% if is_upload %}
-    {{ form.checkbox(field_clear, label=_('Clear Upload'), id='field-clear-upload', value='true', error='', classes=['control-full']) }}
-    {% endif %}
+        {% call form.input('upload', label=_('File'), id='field-image-upload', type='file', placeholder='', value='',
+    error='', classes=['control-full']) %}
+            {% set session_credentials = h.get_session_credentials(pkg_name) %}
+            {% if 'SessionToken' in session_credentials %}
+                {% resource 's3multipart/s3multipart.css' %}
+                {% resource 's3multipart/aws_sdk.js' %}
 
-    </div>
-{% set session_credentials = h.get_session_credentials(pkg_name) %}
-{% if 'session_token' in session_credentials %}
-<script src="https://sdk.amazonaws.com/js/aws-sdk-2.176.0.min.js"></script>
-<script language="javascript">
+                <a id="advanced-upload" class="btn btn-default"
+                   style="display: none;"
+                   data-module="s3multipart"
+                   data-module-accessKeyId="{{session_credentials["AccessKeyId"]}}"
+                   data-module-secretAccessKey="{{session_credentials["SecretAccessKey"]}}"
+                   data-module-sessionToken="{{session_credentials["SessionToken"]}}"
+                   data-module-region="{{h.get_s3_region()}}"
+                   data-module-bucket="{{h.get_s3_bucket()}}"
+                   data-module-prefix="{{h.get_s3_prefix(pkg_name)}}"
+                >
+                    <i class="fa fa-cloud-upload"></i>Advanced Upload
+                </a>
 
-    var files;
-    var managedUpload;
-    var s3_enabled = false;
-    var isInChoose  = false;
+                <script>
+                  var files;
+                  var managedUpload;
+                  var s3_enabled = false;
+                  var isInChoose = false;
 
-    function s3Setup() {
-        // https://jsfiddle.net/embkay06/kjjcv42L/32/
-        $(window).on("focus", function(temp){
-            if(isInChoose)
-            {
-                isInChoose		=	false;
-                setTimeout(function(){
-                    temp            =   $("#field-image-upload").val();
-                    if(temp)
-                    {
-                        return;
-                    }
-                    s3_enabled = false;
-                }, 500);
-            }
-        });
-        $('#field-image-upload').change(function (evt) {
-            files = evt.target.files;
-            if (files.length == 0) {
-                s3_enabled = false;
-            }
-            if (s3_enabled) {
-                var s3 = new AWS.S3({
-                    accessKeyId: '{{session_credentials["access_key"]}}',
-                    secretAccessKey: '{{session_credentials["secret_key"]}}',
-                    sessionToken: '{{session_credentials["session_token"]}}',
-                    region: '{{h.get_s3_region()}}'
-                });
-                // https://docs.aws.amazon.com/AWSJavaScriptSDK/latest/AWS/S3/ManagedUpload.html
-                // default = 4 concurrent uploads of 5mb parts
-                managedUpload = s3.upload({
-                    ACL: 'public-read',
-                    Body: files[0],
-                    Bucket: '{{h.get_s3_bucket()}}',
-                    Key: '{{h.get_s3_prefix(pkg_name)}}' + files[0].name
-                }, function (error, data) {
-                    // upload finished
-                    if (error) {
-                        // upload failed
-                        $('.meter').hide();
-                        $('#upload-progress').html('Upload failed due to error:' + data);
-                        console.log(data);
-                    } else if (data) {
-                        // upload succeeded
-                        $('.meter').hide();
-                        $('#upload-progress').html('Upload completed, file available at <a href="' + data['Location']
+                  function s3Setup() {
+                    // https://jsfiddle.net/embkay06/kjjcv42L/32/
+                    $(window).on("focus", function (temp) {
+                      if (isInChoose) {
+                        isInChoose = false;
+                        setTimeout(function () {
+                          temp = $("#field-image-upload").val();
+                          if (temp) {
+                            return;
+                          }
+                          s3_enabled = false;
+                        }, 500);
+                      }
+                    });
+                    $('#field-image-upload').change(function (evt) {
+                      files = evt.target.files;
+                      if (files.length == 0) {
+                        s3_enabled = false;
+                      }
+                      if (s3_enabled) {
+                        var s3 = new AWS.S3({
+                          accessKeyId: '{{session_credentials["AccessKeyId"]}}',
+                          secretAccessKey: '{{session_credentials["SecretAccessKey"]}}',
+                          sessionToken: '{{session_credentials["SessionToken"]}}',
+                          region: '{{h.get_s3_region()}}'
+                        });
+                        // https://docs.aws.amazon.com/AWSJavaScriptSDK/latest/AWS/S3/ManagedUpload.html
+                        // default = 4 concurrent uploads of 5mb parts
+                        managedUpload = s3.upload({
+                          ACL: 'public-read',
+                          Body: files[0],
+                          Bucket: '{{h.get_s3_bucket()}}',
+                          Key: '{{h.get_s3_prefix(pkg_name)}}' + files[0].name
+                        }, function (error, data) {
+                          // upload finished
+                          if (error) {
+                            // upload failed
+                            $('.meter').hide();
+                            $('#upload-progress').html('Upload failed due to error:' + data);
+                            console.log(data);
+                          }
+                          else if (data) {
+                            // upload succeeded
+                            $('.meter').hide();
+                            $('#upload-progress').html('Upload completed, file available at <a href="' + data['Location']
                                 + '">' + data['Location'] + '</a>');
 
-                        $('#field-image-url').attr('value', data['Location']);
-                        $('#field-image-url')[0].value = data['Location'];
-                        $('#field-image-url').attr('placeholder', data['Location']);
+                            $('#field-image-url').attr('value', data['Location']);
+                            $('#field-image-url')[0].value = data['Location'];
+                            $('#field-image-url').attr('placeholder', data['Location']);
 
-                    }
-                });
+                          }
+                        });
 
-                managedUpload.on('httpUploadProgress', function (progress) {
-                    // progress event handler
-                    // progress.loaded = number of bytes uploaded so far
-                    $('.meter').show();
-                    $('.meter').first().children().width(Math.round(progress.loaded / progress.total * 100) + '%');
-                    $('#upload-progress').html(
-                            Math.round(progress.loaded / progress.total * 100)
-                            + '% uploaded (' + progress.loaded + ' of ' + progress.total + ' bytes)');
-                });
+                        managedUpload.on('httpUploadProgress', function (progress) {
+                          // progress event handler
+                          // progress.loaded = number of bytes uploaded so far
+                          $('.meter').show();
+                          $('.meter').first().children().width(Math.round(progress.loaded / progress.total * 100) + '%');
+                          $('#upload-progress').html(
+                              Math.round(progress.loaded / progress.total * 100)
+                              + '% uploaded (' + progress.loaded + ' of ' + progress.total + ' bytes)');
+                        });
 
-                $('.btn-remove-url').on('click', function () {
-                    s3_enabled = false;
-                    managedUpload.abort();
-                });
-                $(evt.target).val('');
-            }
-            ;
-        });
-        $("#advanced-upload").show();
-        $("#advanced-upload").on('click', function () {
-            s3_enabled = true;
-            isInChoose   = true;
-            $('#field-image-upload').click();
+                        $('.btn-remove-url').on('click', function () {
+                          s3_enabled = false;
+                          managedUpload.abort();
+                        });
+                        $(evt.target).val('');
+                      }
+                      ;
+                    });
+                    $("#advanced-upload").show();
+                    $("#advanced-upload").on('click', function () {
+                      s3_enabled = true;
+                      isInChoose = true;
+                      $('#field-image-upload').click();
 
-        })
-    }
-    window.onload = function () {
-        s3Setup();
-    };
+                    })
+                  }
 
-</script>
-{% endif %}
+                  window.onload = function () {
+                    s3Setup();
+                  };
+
+                </script>
+            {% endif %}
+        {% endcall %}
+        {% if is_upload %}
+            {{ form.checkbox(field_clear, label=_('Clear Upload'), id='field-clear-upload', value='true', error='',
+    classes=['control-full']) }}
+        {% endif %}
+
+    </div>
+
 {% endblock %}
